src/ui/history/snapshots/ppoker__ui__history__tests__Empty history page.snap
---
source: src/ui/history/tests.rs
assertion_line: 204
expression: terminal.backend()
---
"╭Overview──────────────────────────────────────────────────────────────────────╮"
"│Name: test | Room: Planning Room | Server: wss://mocked | State: Playing |    │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭History───────────────────────╮                                                "
"│Round    Average     Duration │                                                "
"│                              │                                                "
"│                              │                                                "
"│                              │                                                "
"│                              │                                                "
"│                              │                                                "
"│                              │                                                "
"│                              │                                                "
"│                              │                                                "
"│                              │                                                "
"│                              │                                                "
"│                              │                                                "
"╰──────────────────────────────╯                                                "
"                                                                                "
" Vote | ↑ | ↓ | Quit                                                            "
"                                                                                "
