src/ui/history/snapshots/ppoker__ui__history__tests__History page with multiple rounds.snap
---
source: src/ui/history/tests.rs
assertion_line: 243
expression: terminal.backend()
---
"╭Overview────────────────────────────────────────────────────────────────────────────────╮"
"│Name: Alice | Room: Planning Room | Server: wss://mocked | State: Playing | Round: 4 (0 │"
"╰────────────────────────────────────────────────────────────────────────────────────────╯"
"╭History───────────────────────────╮╭Your vote───────╮╭Vote distributio╮╭Average vote────╮"
"│  Round    Average     Duration   ││    ██████      ││         ██ ██  ││██████          │"
"│                                  ││    ██          ││         ██ ██  ││██              │"
"│> 1        5.3         0 seconds  ││    █████       ││         ██ ██  ││█████           │"
"│  2        10.5        0 seconds  ││        ██      ││         ██ ██  ││    ██          │"
"│  3        4.0         0 seconds  ││        ██      ││         ██ ██  ││    ██          │"
"│                                  ││    ██  ██      ││         ██ ██  ││██  ██    ██    │"
"│                                  ││     ████       ││         3█ 5█  ││ ████     ██    │"
"│                                  │╰────────────────╯╰────────────────╯╰────────────────╯"
"│                                  │╭Players─────────────────────────────────────────────╮"
"│                                  ││Name       Vote                                     │"
"│                                  ││                                                    │"
"│                                  ││Bob        3                                        │"
"│                                  ││Alice      5                                        │"
"│                                  ││Charlie    8                                        │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"│                                  ││                                                    │"
"╰──────────────────────────────────╯╰────────────────────────────────────────────────────╯"
"                                                                                          "
" Vote | ↑ | ↓ | Quit                                                                      "
"                                                                                          "
